force-app/main/default/objects/breg_Entity_List_Result__c/breg_Entity_List_Result__c.object-meta.xml
<CustomObject>
    <description>Aalta BREG-58</description>
    <label>Entity List Result</label>
    <nameField>
        <displayFormat>ListResult-{00000000}</displayFormat>
        <label>Entity List Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity List Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>