force-app/main/default/objects/breg_Entity_List_Result__c/fields/Approximate_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Record_Count__c</fullName>
    <description>Aalta BREG-982</description>
    <label>Approximate Record Count</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>