force-app/main/default/objects/breg_Entity_List_Result__c/fields/breg_Contact__c.field-meta.xml
<CustomField>
    <fullName>breg_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-982</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entity List Results</relationshipLabel>
    <relationshipName>breg_Entity_List_Results</relationshipName>
    <type>Lookup</type>
</CustomField>