force-app/main/default/objects/breg_Entity_List_Result__c/fields/breg_Cost_of_List__c.field-meta.xml
<CustomField>
    <fullName>breg_Cost_of_List__c</fullName>
    <description>Aalta BREG-982</description>
    <label>Cost of List</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>