force-app/main/default/objects/breg_Entity_List_Result__c/fields/breg_Download_Link__c.field-meta.xml
<CustomField>
    <fullName>breg_Download_Link__c</fullName>
    <description>Aalta BREG-982</description>
    <label>Download Link</label>
    <type>Url</type>
</CustomField>