force-app/main/default/objects/breg_Entity_List_Result__c/fields/breg_Entity_List__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity_List__c</fullName>
    <description>Aalta BREG-58</description>
    <label>Entity List</label>
    <referenceTo>breg_Entity_List__c</referenceTo>
    <relationshipLabel>Entity List Results</relationshipLabel>
    <relationshipName>Entity_List_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>